--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -51,27 +51,19 @@
                     evaluate
                     and generate new spatial configurations for contemporary urban systems. The aim is to explore the
                     possibility of
-                    constructing a computational analytic model, termed “Perceptive Machine”, which could function as an
-                    additional
-                    layer in the design process by mining, analysing and visualising geo-spatial data in a virtual 3D
-                    space.
-                    This system helps in the creation of new topographies which encourage the interplay between human
-                    and
-                    inhuman intelligence in an environment of hybrid cyberspace. Hypervirtuality,
-                    the analysis and evaluation of a set of multidimensional continuous data in Virtual Reality could
-                    challenge the way people perceive the urban fabric. This immersive space that mixes real and virtual
-                    offers the necessary ground for this analytic workflow to expand beyond computation into a gradient
-                    of
-                    experiences.
+                    developping a work-flow which changes a given structure based on data. In this case we experiment on
+                    the application of certain patterns which are shaped and reformed based on data evaluation and
+                    optimisation processes. 
+
                 </p>
             </div>
             <div class="grid-index">
                 <h5>KEYWORDS</h5>
                 <h5>Urban Analytics</h5>
                 <h5>Visual Perception</h5>
-                <h5>VR development</h5>
+                <h5>Optimisation</h5>
                 <h5>Data Driven Design</h5>
-                <h5>Machine Learning</h5>
+                <h5>Generative Design</h5>
             </div>
         </section>
         <!------- IMAGE GRID ------>
@@ -115,7 +107,7 @@
         <section class="central-container ">
             <video autoplay muted loop class="margin-video" id="vr-video">
                 <source src="../images/perceptiveDatascapes/videos/patternsOptimisation.mp4" type="video/mp4">
-            </video>           
+            </video>
         </section>
 
         <!------- HALFSCREEN IMAGE ------>
