--- a/DecodeCollective/projects/urbanGrowth.html
+++ b/DecodeCollective/projects/urbanGrowth.html
@@ -101,7 +101,7 @@
     
     <!------- VIDEO ------>
     <section class="light-background">
-        <video autoplay muted loop id="vr-video">
+        <video autoplay muted loop class="vr-video">
             <source src="../images/urbanGrowth/videos/Cellular Automata.mp4" type="video/mp4">
         </video>
     </section>
@@ -112,6 +112,7 @@
     <section class="light-background" id="ug-full-image">
     </section>
 
+    <div class="free-space"></div>
     <section class="light-background" id="ug-full-image1">
     </section>
 
