--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -40,18 +40,16 @@
 
     <div class="body-container">
         <section class="central-container project-wallpaper" id="gi-wallpaper">
-            <h2 class="fade-in">Geospatial Analytics To Data Driven Design</h2>
+            <h2 class="fade-in">Urban Networks and Machine Intuition</h2>
         </section>
         <section class="project-description project-wallpaper">
             <div class="grid-heading">
-                <h1>Perceptive Datascapes</h1>
+                <h1>Geospatial Analytics</h1>
             </div>
             <div class="grid-body">
-                <p>This research reflects upon principles of physical connectivity and visual perception as the means to
-                    evaluate
-                    and generate new spatial configurations for contemporary urban systems. The aim is to explore the
+                <p>The aim of the project is to explore the
                     possibility of
-                    constructing a computational analytic model, termed “Perceptive Machine”, which could function as an
+                    constructing a computational analytic model, which could function as an
                     additional
                     layer in the design process by mining, analysing and visualising geo-spatial data in a virtual 3D
                     space.
@@ -68,7 +66,7 @@
             <div class="grid-index">
                 <h5>KEYWORDS</h5>
                 <h5>Urban Analytics</h5>
-                <h5>Visual Perception</h5>
+                <h5>Data Analysis</h5>
                 <h5>VR development</h5>
                 <h5>Data Driven Design</h5>
                 <h5>Machine Learning</h5>
