--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -80,16 +80,16 @@
       <div class="generic-wrapper">
 
         <div class="full-grid" id="slideshow">
-          <div class="sli-child">
-            <img src="/images/landingPage/slideshow/IMG_0739.JPG">
+          <div class="sli-child" id="sli-child1">
+            <!-- <img src="/images/landingPage/slideshow/IMG_0739.JPG"> -->
           </div>
-          <div class="sli-child">
+          <div class="sli-child hidden">
             <img src="/images/landingPage/slideshow/IMG_0381.JPG">
           </div>
-          <div class="sli-child">
+          <div class="sli-child hidden">
             <img src="/images/landingPage/slideshow/8_1.jpg">
           </div>
-          <div class="sli-child">
+          <div class="sli-child hidden">
             <img src="/images/landingPage/slideshow/2.jpg">
           </div>
       </div>
