--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -77,7 +77,7 @@
             <div class="grid-images-background-up"></div>
             <div class="grid-images-background-down"></div>
             <div class="grid-images-left">
-                <div id="pc-grid"></div>
+                <div id="gi-grid"></div>
             </div>
             <div class="grid-images-right">
                 <div id="gi-grid1"></div>
