--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -126,6 +126,33 @@
     </section>
 
     <section class="scroll-item centralise">
+      <div class="project-container-grid ">
+        <div class="project-img-container " id="geospatialanalytics-project-img">
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+          <div class="i geospatial-overlay"></div>
+        </div>
+        <div class="project-container-grid-top"></div>
+        <div class="project-container-grid-mid">
+          <a class="project-button slide-top show-on-scroll" href="projects/geospatialinfographics.html" index=4>Geospatial Analytics</a>
+        </div>
+        <div class="project-container-grid-bottom">
+          <span class="hor-line"></span>
+          <p class="project-subtitle"> Urban Networks and Machine Learning</p>
+        </div>
+    </section>
+
+    <section class="scroll-item centralise">
       <div class="project-container-grid">
         <div class="project-img-container" id="urbanGrowth-project-img">
           <div class="i urbanGrowth-overlay"></div>
@@ -144,7 +171,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top show-on-scroll" href="projects/urbanGrowth.html" index=4>Urban Growth</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/urbanGrowth.html" index=5>Urban Growth</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
