--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -99,7 +99,7 @@
 
         <section>
             <video autoplay muted loop class="vr-video" >
-                <source src="../images/perceptiveDatascapes/videos/overview.mp4" type="video/mp4">
+                <source src="../images/geospatialInfographics/videos/vrVideo2.mp4" type="video/mp4">
             </video>
         </section>
 
@@ -112,7 +112,7 @@
         <!------- VIDEO ------>
         <section class="central-container ">
             <video autoplay muted loop class="margin-video">
-                <source src="../images/perceptiveDatascapes/videos/patternsOptimisation.mp4" type="video/mp4">
+                <source src="../images/geospatialInfographics/videos/pointClouds.mp4" type="video/mp4">
             </video>           
         </section>
 
@@ -132,7 +132,7 @@
 
         <div class="project-title">
             <span class="hor-line"></span>
-            <h6 class="scroll project-subtitle">Perceptive Datascapes</h6>
+            <h6 class="scroll project-subtitle">Geospatial Analytics</h6>
         </div>
     </div>
     <div class="footer">
