--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -109,23 +109,20 @@
         <section id="gi-full-image1">
         </section>
 
-        <!------- VIDEO ------>
-        <section class="central-container ">
-            <video autoplay muted loop class="margin-video">
+        <div class="free-space dark-background"></div>
+       
+        <section id="gi-full-image2" >
+        </section>
+
+        <div class="free-space dark-background"></div>
+         <!------- VIDEO ------>
+         <section class="central-container ">
+            <video autoplay muted loop >
                 <source src="../images/geospatialInfographics/videos/pointClouds.mp4" type="video/mp4">
             </video>           
-        </section>
-
-        <!------- HALFSCREEN IMAGE ------>
-        <!-- <section class="central-container">        
-         <div class="offset-image" id="pc-offset-image"> </div>
-    </section> -->
-
-        <div class="free-space "></div>
-        <section id="gi-full-image2" class="light-background">
-        </section>
-
-        <div class="free-space "></div>
+        </section>     
+       
+        <div class="free-space dark-background"></div>
 
         <section id="gi-full-image">
         </section>
