--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -88,7 +88,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top show-on-scroll" href="projects/" index=2>Rawbot</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/rawbot.html" index=2>Rawbot</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
