--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -61,7 +61,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top show-on-scroll" href="projects/perceptiveDatascapes.html" index=1>Perceptive Datascapes</a>
+          <a class="project-button fade-in show-on-scroll" href="projects/perceptiveDatascapes.html" index=1>Perceptive Datascapes</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
@@ -88,7 +88,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top show-on-scroll" href="projects/rawbot.html" index=2>Rawbot</a>
+          <a class="project-button fade-in show-on-scroll" href="projects/rawbot.html" index=2>Rawbot</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
@@ -116,7 +116,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top show-on-scroll" href="projects/" index=3>Swapper</a>
+          <a class="project-button fade-in show-on-scroll" href="projects/" index=3>Swapper</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
@@ -210,7 +210,7 @@
         <span class="arrow second next "></span>
       </div>
     </div>
-    <h6 class="scroll">Scroll</h6>
+    <h6 class="scroll" id="scroll-text">Scroll</h6>
   </div>
 
 
