--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -83,6 +83,7 @@
                 <div id="gi-grid1"></div>
             </div>
         </div>
+        <div class="free-space-s dark-background "></div>
         <div class="grid-images">
             <div class="grid-images-background-down"></div>
             <div class="grid-images-background-down-w"></div>
