--- a/DecodeCollective/projects/rawbot.html
+++ b/DecodeCollective/projects/rawbot.html
@@ -83,6 +83,7 @@
                 <div id="ra-grid5"></div>
             </div>
         </div>
+        <div class="free-space-s dark-background "></div>
         <div class="grid-images">
             <div class="grid-images-background-down "></div>
             <div class="grid-images-background-down-w"></div>
@@ -140,7 +141,7 @@
         </div>
 
         <div class="free-space "></div>   
-        <section class= "light backfround" id="ra-full-image3"></section>
+        <section id="ra-full-image3"></section>
 
 
 
