--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -77,6 +77,7 @@
                 <div id="pc-grid1"></div>
             </div>
         </div>
+        <div class="free-space-s dark-background "></div>
         <div class="grid-images">
             <div class="grid-images-background-down"></div>
             <div class="grid-images-background-down-w"></div>
