--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Decode Collective</title>
-  <link rel="icon" type="image/png" href="images/logo/decod_button.png" sizes="128x128">
+  <link rel="icon" type="image/png" href="images/logo/decod_favicon.png" sizes="128x128">
   <meta name="description" content="Design for fabrication and project automation">
 
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles/Style.css">
 
-  <!-- Fonts --> 
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
- 
+
 </head>
 
 <body class="body-restriction">
@@ -25,7 +25,7 @@
     <div class="navParent">
       <div class="navbar">
         <div class="logo">
-          <a href="Index.html" >
+          <a href="Index.html">
             <img src="images/logo/decod_button.png" alt="logo">
           </a>
         </div>
@@ -42,33 +42,6 @@
   </div>
 
   <div class="scroll-container">
-    <section class="scroll-item centralise">
-      <div class="project-container-grid ">
-        <div class="project-img-container " id="perceptiveDatascapes-project-img">
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-          <div class="i perceptive-overlay"></div>
-        </div>
-        <div class="project-container-grid-top"></div>
-        <div class="project-container-grid-mid">
-          <a class="project-button fade-in show-on-scroll" href="projects/perceptiveDatascapes.html" index=1>Perceptive Datascapes</a>
-        </div>
-        <div class="project-container-grid-bottom">
-          <span class="hor-line"></span>
-          <p class="project-subtitle"> Data Driven Design And Analytics</p>
-        </div>
-    </section>
-
     <section class="scroll-item centralise">
       <div class="project-container-grid ">
         <div class="project-img-container " id="rawbot-project-img">
@@ -88,39 +61,11 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button fade-in show-on-scroll" href="projects/rawbot.html" index=2>Rawbot</a>
+          <a class="project-button fade-in show-on-scroll" href="projects/rawbot.html" index=1>Rawbot</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
           <p class="project-subtitle"> Augmented Reality (AR) Fabrication Workflow</p>
-        </div>
-      </div>
-    </section>
- 
-    <section class="scroll-item centralise">
-      <div class="project-container-grid">
-        <div class="project-img-container" id="swapper-project-img">
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-          <div class="i swapper-overlay"></div>
-        </div>
-        <div class="project-container-grid-top"></div>
-        <div class="project-container-grid-mid">
-          <a class="project-button fade-in show-on-scroll" href="projects/" index=3>Swapper</a>
-        </div>
-        <div class="project-container-grid-bottom">
-          <span class="hor-line"></span>
-          <p class="project-subtitle">Design Evaluation And Experimentation For Housing</p>
         </div>
       </div>
     </section>
@@ -144,12 +89,70 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top show-on-scroll" href="projects/geospatialinfographics.html" index=4>Geospatial Analytics</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/geospatialinfographics.html" index=2>Visual
+            Perception Mapping</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
           <p class="project-subtitle"> Urban Networks and Machine Learning</p>
         </div>
+    </section>
+
+
+    <section class="scroll-item centralise">
+      <div class="project-container-grid ">
+        <div class="project-img-container " id="perceptiveDatascapes-project-img">
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+          <div class="i perceptive-overlay"></div>
+        </div>
+        <div class="project-container-grid-top"></div>
+        <div class="project-container-grid-mid">
+          <a class="project-button fade-in show-on-scroll" href="projects/perceptiveDatascapes.html" index=3>Perceptive
+            Datascapes</a>
+        </div>
+        <div class="project-container-grid-bottom">
+          <span class="hor-line"></span>
+          <p class="project-subtitle"> Data Driven Design And Analytics</p>
+        </div>
+    </section>
+
+    <section class="scroll-item centralise">
+      <div class="project-container-grid">
+        <div class="project-img-container" id="swapper-project-img">
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+          <div class="i swapper-overlay"></div>
+        </div>
+        <div class="project-container-grid-top"></div>
+        <div class="project-container-grid-mid">
+          <a class="project-button fade-in show-on-scroll" href="projects/" index=4>Swapper</a>
+        </div>
+        <div class="project-container-grid-bottom">
+          <span class="hor-line"></span>
+          <p class="project-subtitle">Design Evaluation And Experimentation For Housing</p>
+        </div>
+      </div>
     </section>
 
     <section class="scroll-item centralise">
@@ -189,18 +192,18 @@
     <div class="t3">
     </div>   
   </button> -->
-<!-- 
+  <!-- 
   <div id="project-list" class="hidden overlay">
     <a class="" href="projects/perceptiveDatascapes.html">Perceptive Datascapes</a>
     <a class="" href="projects/">Rawbot</a>
     <a class="" href="projects/">Swapper</a>
     <a class="" href="projects/">Urban Growth</a>
   </div> -->
- 
+
   <div class="counter">
     <h6 id="current-project">1</h6>
     <hr id="divider" class="divider">
-    <h6 >5</h6>
+    <h6>5</h6>
   </div>
 
   <div class="footer">
