--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Decode Collective</title>
-    <link rel="icon" type="image/png" href="../images/logo/decod_button.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="../images/logo/decod_favicon.png" sizes="128x128">
     <meta name="description" content="Design for fabrication and project automation">
 
     <meta name="viewport" content="width=device-width">
@@ -44,7 +44,7 @@
         </section>
         <section class="project-description project-wallpaper">
             <div class="grid-heading">
-                <h1>Geospatial Analytics</h1>
+                <h1>Visual Perception Mapping</h1>
             </div>
             <div class="grid-body">
                 <p>The aim of the project is to explore the
