--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -47,12 +47,16 @@
                 <h1>Visual Perception Mapping</h1>
             </div>
             <div class="grid-body">
-                <p>The aim of the project is to explore the
+                <p>This research reflects upon principles of physical connectivity and visual perception as the means to
+                    evaluate
+                    and generate new spatial configurations for contemporary urban systems. The aim of the project is to
+                    explore the
                     possibility of
                     constructing a computational analytic model, which could function as an
                     additional
                     layer in the design process by mining, analysing and visualising geo-spatial data in a virtual 3D
-                    space.
+                    space. By evaluating parts of the city against the main components that affect visual perception
+                    (visibility, light, colour and movement), we identify areas of low permeability.
                     This system helps in the creation of new topographies which encourage the interplay between human
                     and
                     inhuman intelligence in an environment of hybrid cyberspace. Hypervirtuality,
@@ -95,12 +99,15 @@
             </div>
         </div>
         <!--end of image grid-->
-
+        <div class="free-space dark-background"></div>
+        <div class="free-space dark-background central-container text-centre">
+            <h4 class="slide-top">Projecting multi-dimensional data in virtual environment experience</h4>
+        </div>
         <div class="free-space dark-background"></div>
 
         <section>
             <video autoplay muted loop class="vr-video">
-                <source src="../images/geospatialInfographics/videos/vrVideo2.mp4" type="video/mp4">
+                <source src="../images/geospatialInfographics/videos/vrVideo2short.mp4" type="video/mp4">
             </video>
         </section>
 
@@ -112,14 +119,20 @@
 
         <div class="free-space dark-background"></div>
 
-        <section id="gi-full-image2">
+        <div class="free-space dark-background central-container text-centre">
+            <h4 class="slide-top">Looking for clusters of urban areas with similar permeability characteristics</h4>
+        </div>
+
+        <div class="free-space dark-background"></div>
+
+        <section id="gi-full-image2" class="slide-top">
         </section>
 
         <div class="free-space dark-background"></div>
         <!------- VIDEO ------>
         <section class="central-container ">
             <video autoplay muted loop>
-                <source src="../images/geospatialInfographics/videos/pointClouds1.mp4" type="video/mp4">
+                <source src="../images/geospatialInfographics/videos/data_Analytics.mp4" type="video/mp4">
             </video>
         </section>
 
@@ -137,7 +150,7 @@
 
         <div class="project-title">
             <span class="hor-line"></span>
-            <h6 class="scroll project-subtitle">Geospatial Analytics</h6>
+            <h6 class="scroll project-subtitle">Visual Perception Mapping</h6>
         </div>
     </div>
     <div class="footer">
