--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -47,13 +47,11 @@
                 <h1>Perceptive Datascapes</h1>
             </div>
             <div class="grid-body">
-                <p>This research reflects upon principles of physical connectivity and visual perception as the means to
-                    evaluate
-                    and generate new spatial configurations for contemporary urban systems. The aim is to explore the
+                <p> This project explores the potentials of data driven design in building and landscape level as a seemless structure. The aim is to explore the
                     possibility of
-                    developping a work-flow which changes a given structure based on data. In this case we experiment on
+                    developping a work-flow which changes a given structure based on an input set of data. In this case we experiment on
                     the application of certain patterns which are shaped and reformed based on data evaluation and
-                    optimisation processes. 
+                    optimisation processes. The research focuses on 
 
                 </p>
             </div>
@@ -99,6 +97,10 @@
         </section>
 
         <div class="free-space dark-background"></div>
+        <div class="free-space dark-background central-container text-centre">
+            <h4 class="slide-top">Looking for clusters of urban areas with similar permeability characteristics</h4>
+        </div>
+        <div class="free-space dark-background"></div>
 
         <!------- FULLSCREEN IMAGE ------>
         <section id="pc-full-image1">
@@ -114,7 +116,11 @@
             </div>
         </div>
     
-        <div class="free-space "></div>
+        <div class="free-space  central-container text-centre">
+            <h4 class="slide-top text-black">Looking for clusters of urban areas with similar permeability characteristics</h4>
+        </div>
+
+        
         <section id="pc-full-image2" class="light-background">
         </section>
 
