--- a/DecodeCollective/projects/urbanGrowth.html
+++ b/DecodeCollective/projects/urbanGrowth.html
@@ -108,9 +108,9 @@
     </section>
 
     <div class="free-space  central-container text-centre">
-        <h4 class="slide-top text-black">Looking for clusters of urban areas with similar permeability characteristics</h4>
+        <h4 class="slide-top text-black">Volumetric estimations of construction by maintaining the overall volume</h4>
     </div>
-    
+
     <!------- FULLSCREEN IMAGE ------>
     <div class="light-background short-image" id="ug-full-image">
     </div>
