--- a/DecodeCollective/projects/rawbot.html
+++ b/DecodeCollective/projects/rawbot.html
@@ -153,7 +153,7 @@
 
         <div class="project-title">
             <span class="hor-line"></span>
-            <h6 class="scroll project-subtitle">Geospatial Analytics</h6>
+            <h6 class="scroll project-subtitle">Rawbot</h6>
         </div>
     </div>
     <div class="footer">
@@ -166,9 +166,12 @@
         <h6 class="scroll">Scroll</h6>
     </div>
 
-    <div class="next-project-gap"></div>
-    <div class="next-project ">
-        <a href="../projects.html">Next Project</a>
+    
+    <div class="next-project next-project-gi">
+        
+    </div>
+    <div class="next-project-gap central-container">
+        <a href="geospatialinfographics.html">Next Project</a>
     </div>
 
     <!-- ----------------- SCRIPTS ----------------- -->
