--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -131,7 +131,7 @@
         <div class="free-space dark-background"></div>
         <!------- VIDEO ------>
         <section class="central-container ">
-            <video autoplay muted loop>
+            <video autoplay muted loop  class="vr-video">
                 <source src="../images/geospatialInfographics/videos/data_Analytics.mp4" type="video/mp4">
             </video>
         </section>
@@ -142,7 +142,7 @@
 
         <!------- VIDEO ------>
         <section class="central-container ">
-            <video autoplay muted loop>
+            <video autoplay muted loop  class="vr-video">
                 <source src="../images/geospatialInfographics/videos/tsne.mp4" type="video/mp4">
             </video>
         </section>
@@ -163,9 +163,11 @@
         <h6 class="scroll">Scroll</h6>
     </div>
 
-    <div class="next-project-gap"></div>
-    <div class="next-project ">
-        <a href="../projects.html">Next Project</a>
+    <div class="next-project next-project-pc">
+        <p>Next Project</p>
+    </div>
+    <div class="next-project-gap">
+        <a class="full-a"  href="perceptiveDatascapes.html"></a>
     </div>
 
     <!-- ----------------- SCRIPTS ----------------- -->
