--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -144,11 +144,12 @@
         <h6 class="scroll">Scroll</h6>
     </div>
 
-    <div class="next-project-gap"></div>
-    <div class="next-project ">
-        <a href="../projects.html">Next Project</a>
+    <div class="next-project next-project-sw">
+        <p>Next Project</p>
     </div>
-
+    <div class="next-project-gap">
+        <a class="full-a"  href="geospatialinfographics.html"></a>
+    </div>
     <!-- ----------------- SCRIPTS ----------------- -->
 
 </body>
