--- a/DecodeCollective/projects/rawbot.html
+++ b/DecodeCollective/projects/rawbot.html
@@ -168,10 +168,10 @@
 
     
     <div class="next-project next-project-gi">
-        
+        <p>Next Project</p>
     </div>
-    <div class="next-project-gap central-container">
-        <a href="geospatialinfographics.html">Next Project</a>
+    <div class="next-project-gap">
+        <a class="full-a"  href="geospatialinfographics.html"></a>
     </div>
 
     <!-- ----------------- SCRIPTS ----------------- -->
