--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -98,7 +98,7 @@
 
         <div class="free-space dark-background"></div>
         <div class="free-space dark-background central-container text-centre">
-            <h4 class="slide-top">Looking for clusters of urban areas with similar permeability characteristics</h4>
+            <h4 class="slide-top">3D printed form finding experiments</h4>
         </div>
         <div class="free-space dark-background"></div>
 
@@ -117,7 +117,7 @@
         </div>
     
         <div class="free-space  central-container text-centre">
-            <h4 class="slide-top text-black">Looking for clusters of urban areas with similar permeability characteristics</h4>
+            <h4 class="slide-top text-black">Simulation based topography morphing</h4>
         </div>
 
         
