--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -131,7 +131,7 @@
         <div class="free-space dark-background"></div>
         <!------- VIDEO ------>
         <section class="central-container ">
-            <video autoplay muted loop  class="vr-video">
+            <video autoplay muted loop  class="vr-video contained-video">
                 <source src="../images/geospatialInfographics/videos/data_Analytics.mp4" type="video/mp4">
             </video>
         </section>
