projects image aminations

--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -18,7 +18,7 @@
   <div class="scroll-container">
 
     <!-- Landing media -->
-    <section data-title="Decode Creative Technologies Home">
+    <section data-title="Decode Creative Technologies Home" class="scroll-item" index="1">
       <div class="generic-wrapper">
 
         <div class="navbar">
@@ -61,7 +61,7 @@
 
     <!-- About section -->
 
-    <section class="scroll-item" id="about" data-title="About">
+    <section class="scroll-item" id="about" data-title="About" index="2">
       <div class="generic-wrapper second-wrapper">
 
         <div class="full-grid" id="about-photo"> </div>
@@ -79,7 +79,7 @@
 
     <!-- Projects Section -->
 
-    <section class="scroll-item" id="projects" data-title="Projects">
+    <section class="scroll-item" id="projects" data-title="Projects" index="3">
       <div class="generic-wrapper">
 
         <div class="full-grid-no-flex" id="slideshow">
@@ -109,7 +109,7 @@
     </section>
 
     <!-- Contact section -->
-    <section class="scroll-item central-container" id="contact" data-title="Contact">  
+    <section class="scroll-item central-container" id="contact" data-title="Contact" index="4">  
           
 
       <div class="generic-wrapper">   
@@ -137,12 +137,12 @@
         <span class="arrow second next "></span>
       </div>
     </div>
-    <h6 class="scroll">Scroll</h6>
+    <h6 class="scroll" id="scroll-text">Scroll</h6>
   </div>
 
 </body>
 <script type="text/javascript" defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script  type="text/javascript" defer src="/js/scroll-arrow.js"></script>
+<script  type="text/javascript" defer src="/js/main.js"></script>
 <script  type="text/javascript" defer src="/js/slideshow.js"></script>
 
 <!--<script src="/js/sticky_nav.js"></script>-->
