--- a/DecodeCollective/projects/geospatialinfographics.html
+++ b/DecodeCollective/projects/geospatialinfographics.html
@@ -78,30 +78,31 @@
         </section>
         <!------- IMAGE GRID ------>
         <div class="grid-images">
-            <div class="grid-images-background-up"></div>
+            <div class="grid-images-background-up "></div>
             <div class="grid-images-background-down"></div>
             <div class="grid-images-left">
-                <div id="gi-grid"></div>
+                <div id="gi-grid" class="show-on-scroll transparent" status='fade-in'></div>
             </div>
             <div class="grid-images-right">
-                <div id="gi-grid1"></div>
+                <div id="gi-grid1" class="show-on-scroll transparent" status='fade-in'></div>
             </div>
         </div>
         <div class="free-space-s dark-background "></div>
         <div class="grid-images">
-            <div class="grid-images-background-down"></div>
+            <div class="grid-images-background-down "></div>
             <div class="grid-images-background-down-w"></div>
             <div class="grid-images-left">
-                <div id="gi-grid2"></div>
+                <div id="gi-grid2" class="show-on-scroll transparent" status='fade-in'></div>
             </div>
             <div class="grid-images-right">
-                <div id="gi-grid3"></div>
+                <div id="gi-grid3" class="show-on-scroll transparent" status='fade-in'></div>
             </div>
         </div>
         <!--end of image grid-->
         <div class="free-space dark-background"></div>
         <div class="free-space dark-background central-container text-centre">
-            <h4 class="slide-top">Projecting multi-dimensional data in virtual environment experience</h4>
+            <h4 class="show-on-scroll" status='slide'>Projecting multi-dimensional data in virtual environment experience
+            </h4>
         </div>
         <div class="free-space dark-background"></div>
 
@@ -114,35 +115,36 @@
         <div class="free-space dark-background"></div>
 
         <!------- FULLSCREEN IMAGE ------>
-        <section id="gi-full-image1">
-        </section>
+        <section id="gi-full-image1" class="show-on-scroll transparent" status='fade-in'> </section>
 
         <div class="free-space dark-background"></div>
 
         <div class="free-space dark-background central-container text-centre">
-            <h4 class="slide-top">Looking for clusters of urban areas with similar permeability characteristics</h4>
+            <h4 class="show-on-scroll" status='slide'>Looking for clusters of urban areas with similar permeability
+                characteristics</h4>
         </div>
 
         <div class="free-space dark-background"></div>
 
-        <section id="gi-full-image2" class="slide-top">
-        </section>
+        <div class="show-on-scroll transparent" status='fade-in'>
+            <section id="gi-full-image2"> </section>
+        </div>
 
         <div class="free-space dark-background"></div>
         <!------- VIDEO ------>
         <section class="central-container ">
-            <video autoplay muted loop  class="vr-video contained-video">
+            <video autoplay muted loop class="vr-video contained-video">
                 <source src="../images/geospatialInfographics/videos/data_Analytics.mp4" type="video/mp4">
             </video>
         </section>
 
         <div class="free-space dark-background"></div>
 
-        <section id="gi-full-image"></section>
+        <section class="show-on-scroll transparent" status='fade-in' id="gi-full-image"></section>
 
         <!------- VIDEO ------>
         <section class="central-container ">
-            <video autoplay muted loop  class="vr-video">
+            <video autoplay muted loop class="vr-video">
                 <source src="../images/geospatialInfographics/videos/tsne.mp4" type="video/mp4">
             </video>
         </section>
@@ -154,24 +156,24 @@
         </div>
     </div>
     <div class="footer">
-        <div class="scroll-arrow">
+        <!-- <div class="scroll-arrow">
             <div id="cta">
                 <span class="arrow first next "></span>
                 <span class="arrow second next "></span>
             </div>
         </div>
-        <h6 class="scroll">Scroll</h6>
+        <h6 class="scroll">Scroll</h6> -->
     </div>
 
     <div class="next-project next-project-pc">
         <p>Next Project</p>
     </div>
     <div class="next-project-gap">
-        <a class="full-a"  href="perceptiveDatascapes.html"></a>
+        <a class="full-a" href="perceptiveDatascapes.html"></a>
     </div>
 
     <!-- ----------------- SCRIPTS ----------------- -->
-
+    <script type="text/javascript" defer src="../js/projectSpecific.js"></script>
 </body>
 
 
