--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -146,7 +146,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button fade-in show-on-scroll" href="projects/" index=4>Swapper</a>
+          <a class="project-button fade-in show-on-scroll" href="projects/swapper.html" index=4>Swapper</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
