--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -142,8 +142,8 @@
 
 </body>
 <script type="text/javascript" defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script  type="text/javascript" defer src="./js/main.js"></script>
-<script  type="text/javascript" defer src="./js/slideshow.js"></script>
+<script  type="text/javascript" defer src="js/main.js"></script>
+<script  type="text/javascript" defer src="js/slideshow.js"></script>
 
 <!--<script src="/js/sticky_nav.js"></script>-->
 
