--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -148,7 +148,7 @@
         <p>Next Project</p>
     </div>
     <div class="next-project-gap">
-        <a class="full-a"  href="geospatialinfographics.html"></a>
+        <a class="full-a"  href="swapper.html"></a>
     </div>
     <!-- ----------------- SCRIPTS ----------------- -->
     <script type="text/javascript" defer src="../js/projectSpecific.js"></script>
