--- a/DecodeCollective/projects/swapper.html
+++ b/DecodeCollective/projects/swapper.html
@@ -40,7 +40,7 @@
     </div>
 
     <section class="central-container project-wallpaper" id="sw-wallpaper">
-        <h2 class="fade-in">Material Configurator Frameork</h2>
+        <h2 class="fade-in">Material Configurator Framework</h2>
     </section>
     <section class="project-description project-wallpaper">
         <div class="grid-heading">
