--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -101,7 +101,7 @@
 
         <div class="mid-grid">
           <h1>Projects</h1>
-          <button class="btn btn-3" onclick="window.location.href ='/projects.html'">
+          <button class="btn btn-3" onclick="window.location.href ='projects.html'">
             <span>More of our Work.</span>
           </button>
         </div>        
@@ -122,7 +122,7 @@
         
         <div class="mid-grid">  
           <h1>Contact</h1>
-            <button class="btn btn-3" onclick="window.location.href ='/contact.html'">
+            <button class="btn btn-3" onclick="window.location.href ='contact.html'">
               <span>We 'd love to hear your voice</span>
             </button>
         </div>
