--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -68,7 +68,7 @@
 
         <div class="mid-grid">
           <h1>We analyse what is real<br>and create the illusion.</h1>
-          <button class="btn btn-3" onclick="window.location.href ='/about.html'">
+          <button class="btn btn-3" onclick="window.location.href ='about.html'">
             <span>About the team.</span>
           </button>
         </div>        
