--- a/DecodeCollective/projects/swapper.html
+++ b/DecodeCollective/projects/swapper.html
@@ -47,7 +47,7 @@
             <h1>Swapper</h1>
         </div>
         <div class="grid-body">
-            <p>This project is 
+            <p>Project Description
             </p>
         </div>
         <div class="grid-index">
@@ -85,27 +85,26 @@
     <div class="free-space dark-background"></div>
     
     <!------- VIDEO ------>
-    <section class="light-background central-container">
-        <video autoplay muted loop class="margin-video ">
-            <source src="../images/swapper/videos/" type="video/mp4">
+    <section class="central-container">
+        <video autoplay muted loop class="vr-video contained-video">
+            <source src="../images/swapper/Swapper_Video.mp4" type="video/mp4">
         </video>
     </section>
 
-    <div class="free-space  central-container text-centre">
-        <h4 class="show-on-scroll text-black" status='slide'>Subtitle text</h4>
+    <div class="free-space dark-background central-container text-centre">
+        <h4 class="show-on-scroll" status='slide'>Change materials dynamically</h4>
     </div>
 
-    <!------- FULLSCREEN IMAGE ------>
-    <div class="light-background"><div  id="sw-full-image" class="light-background short-image show-on-scroll transparent" status='fade-in'>
-    </div></div>
+    <div class="dark-background central-container short-image"><div  id="sw-half-image" class="dark-background offset-image show-on-scroll transparent" status='fade-in'>
+    </div></div>   
+    <section class="dark-background central-container"><div  id="sw-full-image" class="dark-background offset-image show-on-scroll transparent" status='fade-in'>
+    </div></section>
 
     
-    <div class="light-background"><section class="light-background show-on-scroll transparent" status='fade-in' id="sw-full-image1"> </section></div>
-    <div class="free-space"></div>
-    <div class="light-background"><section class="light-background show-on-scroll transparent" status='fade-in' id="sw-full-image2">
-    </section></div>
-
-    <div class="free-space"></div>
+    <div class="dark-background"><section class="show-on-scroll transparent" status='fade-in' id="sw-full-image1"> </section></div>
+    <div class="free-space dark-background"></div>
+    <div class="dark-background"><section class="show-on-scroll transparent" status='fade-in' id="sw-full-image2">
+    </section></div>   
 
     <div class="project-title">
         <span class="hor-line"></span>
