--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -30,7 +30,7 @@
                 <nav class="menu" id="siteNav">
                     <ul>
                         <li><a href="../projects.html">Projects.</a></li>
-                        <li><a href="../about.html">About.</a></li>
+                        <li><a href="../about.html" class="inactiveLink">About.</a></li>
                         <li><a href="../contact.html">Contact.</a></li>
                     </ul>
                 </nav>
@@ -145,7 +145,7 @@
     </div>
 
     <div class="next-project next-project-sw">
-        <p>Next Project</p>
+        <h2>Next Project</h2>
     </div>
     <div class="next-project-gap">
         <a class="full-a"  href="swapper.html"></a>
