--- a/DecodeCollective/projects/rawbot.html
+++ b/DecodeCollective/projects/rawbot.html
@@ -30,7 +30,7 @@
                 <nav class="menu" id="siteNav">
                     <ul>
                         <li><a href="../projects.html">Projects.</a></li>
-                        <li><a href="../about.html">About.</a></li>
+                        <li><a href="../about.html" class="inactiveLink">About.</a></li>
                         <li><a href="../contact.html">Contact.</a></li>
                     </ul>
                 </nav>
@@ -192,7 +192,7 @@
 
 
     <div class="next-project next-project-gi">
-        <p>Next Project</p>
+        <h2</p>Next Project</h2>
     </div>
     <div class="next-project-gap">
         <a class="full-a" href="geospatialinfographics.html"></a>
